# orders

./: .env_example  .gitignore  .pre-commit-config.yaml  2nd_task.py  4rd_task.py  5thx.py  Dockerfile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
.github/workflows/: push_image.yml  test_code.yaml
core/: errors.py  repository.py  schemas.py  service.py
core/config/: __init__.py  auth_settings.py  db.py  kafka_settings.py  order_settings.py
mirations/: base.py  env.py
mirations/versions/: 2023_10_19_1526-c8698f7df1a8_order_models.py  2023_10_24_1055-742972736af2_order_tables.py
prometheus_data/: prometheus.yml
src/: app.py  metrics.py
src/auth/: dependencies.py  mixins.py  routes.py  schemas.py  services.py
src/orders/: __init__.py  app.py  base_app.py  dependencies.py  models.py  repository.py  routes.py  schemas.py  services.py  tables.py
src/orders/tests/: conftest.py  fixtures.py  test_categories_api.py  test_products_api.py
tests/: conftest.py  fixtures.py  utils.py
tests/tests_auth/: test_endpoints.py
tests/tests_orders/: test_categories_api.py  test_products_api.py
