[tool.poetry]
name = "orders"
version = "0.1.0"
description = ""
authors = ["range_kun"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
sqlalchemy = "^2.0.22"
alembic = "^1.12.0"
uvicorn = "^0.23.2"
aiokafka = "0.8.1"
pydantic-settings = "^2.0.3"
aiopg = "^1.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
