[tool.poetry]
name = "orders"
version = "0.1.0"
description = ""
authors = ["range_kun"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
sqlalchemy = "^2.0.23"
alembic = "^1.12.1"
uvicorn = "^0.23.2"
aiokafka = "0.8.1"
pydantic-settings = "^2.0.3"
asyncpg = "^0.28.0"
psycopg2-binary = "^2.9.9"
pytest = "^7.4.3"
testcontainers = "^3.7.1"
httpx = "^0.25.0"
pytest-asyncio = "^0.21.1"
mypy = "^1.6.1"
async-asgi-testclient = "^1.4.11"
pyjwt = "^2.8.0"
aiohttp = "^3.9.0"
python-multipart = "^0.0.6"
python-jose = "^3.3.0"
pydantic = {extras = ["email"], version = "^2.5.2"}
jose = "^1.0.0"
aioresponses = "^0.7.6"
prometheus-client = "^0.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 120


[tool.pytest.ini_options]
asyncio_mode = "auto"

[[tool.mypy.overrides]]
module = ["testcontainers.*", "aiokafka.*", "kafka.*"]
ignore_missing_imports = true